--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 			<li>2) I can't figure it out</li>
 			<li>3) This is the worst</li>
 		</ul>
-	<a class="twitter-timeline" href="https://twitter.com/TwitterDev">Tweets by TwitterDev</a> 
+	<!--Twitter Feed-->
+	<a class="twitter-timeline" href="https://twitter.com/adam_twheat">Tweets by Adam</a> 
 	<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+	
+	<!--Follow Button*\-->
 	<a href="https://twitter.com/adam_twheat" class="twitter-follow-button" data-show-count="false">Follow @adam_twheat</a>
 	<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
