--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 			<li>3) This is the worst</li>
 		</ul>
 	<!--Twitter Feed-->
-	<a class="twitter-timeline" href="https://twitter.com/adam_twheat">Tweets by Adam</a> 
+	    <a class="twitter-timeline"  href="https://twitter.com/hashtag/boardgames" data-widget-id="788198292572209152">#boardgames Tweets</a>
+            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+          
 	
 	<!--Follow Button*\-->
 	<a href="https://twitter.com/adam_twheat" class="twitter-follow-button" data-show-count="false">Follow @adam_twheat</a>
