--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
 </head>
 <body>
-	<p>New Test</p>
-	<h2>Why won't this work!</h2>
+	<p>BoardGamr</p>
+	<h2>All things board games</h2>
 		<ul>
 			<li>1) I hate this</li>
 			<li>2) I can't figure it out</li>
 			<li>3) This is the worst</li>
 		</ul>
 	<!--Twitter Feed-->
-	 <a class="twitter-grid" href="https://twitter.com/TwitterDev/timelines/539487832448843776">National Park Tweets</a> 
+	 <a class="twitter-grid" href="https://twitter.com/BoardGamesAsArt">National Park Tweets</a> 
 	<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
           
 	
