--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<li>3) This is the worst</li>
 		</ul>
 	<!--Twitter Feed-->
-	 <a class="twitter-grid" href="https://twitter.com/BoardGamesAsArt">National Park Tweets</a> 
+	 <a class="twitter-grid" data-lang="en" data-limit="5" href="https://twitter.com/FFGames/media">National Park Tweets</a> 
 	<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
           
 	
