--- a/index.html
+++ b/index.html
@@ -1,38 +1,51 @@
 <!DOCTYPE html>
 <html>
-<head>
-</head>
-<body>
-	<p>BoardGamr</p>
-	<h2>All things board games</h2>
-		<ul>
-			<li>1) I hate this</li>
-			<li>2) I can't figure it out</li>
-			<li>3) This is the worst</li>
-		</ul>
-	<!--Twitter Feed-->
-	 <a class="twitter-grid" data-lang="en" data-limit="5" href="https://twitter.com/FFGames/media">National Park Tweets</a> 
-	<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-          
-	
-	<!--Follow Button*\-->
-	<a href="https://twitter.com/adam_twheat" class="twitter-follow-button" data-show-count="false">Follow @adam_twheat</a>
-	
-	<script>window.twttr = (function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0],
-    t = window.twttr || {};
-  if (d.getElementById(id)) return t;
-  js = d.createElement(s);
-  js.id = id;
-  js.src = "https://platform.twitter.com/widgets.js";
-  fjs.parentNode.insertBefore(js, fjs);
- 
-  t._e = [];
-  t.ready = function(f) {
-    t._e.push(f);
-  };
- 
-  return t;
-}(document, "script", "twitter-wjs"));</script>
-</body>
+  <head>
+    <title>Adam Wheat | Personal Website</title>
+    <link href="stylesheet.css" type="text/css" rel="stylesheet" />
+    <!--Google Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+   <script type="text/javascript" src="script.js"></script>
+   <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  </head>
+  <body>
+    <header>
+      <h1 id="name">Adam Wheat</h1>
+      <p id="occupation">Environmental Scientist  +  Web Developer</p>
+    </header>
+    <nav class="main-nav">
+      <ul>
+        <li>Home</li>
+        <li>Work Experience</li>
+        <li>Projects</li>
+        <li>Resume</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
+    <div class="main">
+     <section id="home">
+       <div class="title">
+         <h2>Home</h2>
+       </div>
+       <div class="subheading">
+         <h4>about me</h4>
+       </div>
+       <div class="text">
+           <p>I'm currently an enironmental scientist working for the  State of Indiana writing air permits that help regulate air pollution from industry in the state. I have a bachelor degree from Taylor University in Environmental Science with a focus on geology.</p>
+           <p>In my free time I enjoy board games, woodworking, and coding. My accomplishments in my hobbies include attending Gen Con in Indianapolis every year, having built my dining room table, and teaching my self coding well enough to make this page. </p>
+       </div>
+     </section>
+      <section id="work">
+       <div class="title">
+         <h2>Work Experience</h2>
+       </div>
+       <div class="subheading">
+         <h4>Environmental</h4>
+       </div>
+       <div class="text">
+           <p>Environmental Consulting - Duties included ground water sampling, technical document preparation, data analysis, underground storage tank removal, material testing, concrete sample, etc.</p>
+       </div>
+     </section>
+   </div>
+  </body>
 </html>
