--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li>Work Experience</li>
         <li>Projects</li>
         <li>Resume</li>
-        <li>Contact</li>
+       <li><a href="contacts.html">Contact</a></li>
       </ul>
     </nav>
     <div class="main">
