--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
        </div>
        <div class="text">
          <img src="me.jpg" id="me">
-         <p>I'm currently an enironmental scientist working for the Indiana Department of Environmental Management writing air permits that help regulate air pollution from industries across the state. I have a bachelors degree from Taylor University in Environmental Science with a focus on geology.</p>
+         <p>I'm currently an enironmental scientist working for the Indiana Department of Environmental Management writing air permits that help regulate air pollution from industries across the state. I have a bachelors degree from Taylor University in Environmental Science with a focus on geology. I am currently self-teaching coding in my free time. I am hoping to begin a career related to coding or software testing.</p>
          <p>In my free time I enjoy board games, woodworking, and coding. My accomplishments in my hobbies include attending Gen Con in Indianapolis every year, having built my dining room table, and teaching my self coding well enough to make this page. </p>
        </div>
      </section>
@@ -83,8 +83,13 @@
          <h4>Social Media</h4>
        </div>
        <div class="text">
-        <a class="twitter-timeline" href="https://twitter.com/adam_twheat">Tweets by adam_twheat</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-        <p>Nothing to add here</p>
+        <div id="social">
+         <a href="mailto:awheattu@gmail.com"><img class="media" src="Gmail.png"></a>
+         <a href="https://www.facebook.com/adam.wheat.92"><img class="media" src="Facebook.png"></a>
+         <a href="https://twitter.com/adam_twheat"><img class="media" src="Twitter.png"></a>
+         <a href="https://www.linkedin.com/in/adam-wheat-a94b6b29?trk=nav_responsive_tab_profile"><img class="media" src="LinkedIn.png"></a>
+         <a href="https://www.pinterest.com/therealwheat/"><img class="media" src="Pinterest.png"></a>
+        </div>
        </div>
       </section>
      
